fixed dashboard and current h1 fonts and fixed dashboard on mobile

--- a/current/current-table.css
+++ b/current/current-table.css
@@ -63,6 +63,6 @@ main h1{
         align-items: flex-start;
     }
     main h1{
-        font-size: 1.2rem;
-    }    
+        font-size: 20px;
+    }
 }
